fixed the border not showing in the last column and row

--- a/client/components/Card/card.scss
+++ b/client/components/Card/card.scss
@@ -22,5 +22,13 @@ $minimum-size: 80px;
     justify-content: center;
     align-items: center;
     font-size: 24px;
+
+    &[data-column='5'] {
+      border-right: solid $border-weight #000;
+    }
+
+    &[data-row='5'] {
+      border-bottom: solid $border-weight #000;
+    }
   }
 }
